Fixed layout changing on small screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,12 @@
     src: url(font/Roboto-Medium.ttf);
 }
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 #title {
     font-family: 'Roboto-Thin';
     text-align: center;
@@ -35,24 +41,21 @@ body {
     background-color: #fdf6e3;
 }
 
-#personal img {
-    height: 256px;
-    width: 256px;
-}
-
 .linkbox > img {
     padding: 10px;
     height: 256px;
     width: 256px;
 }
 
-h2 {
+.linkbox > h2 {
     font-family: Roboto-Thin;
     color: #586e75;
+    padding-bottom: 10px;
 }
 
 .linkbox:hover {
     background-color: #eee8d5;
+    /*border: 1px solid #839496;*/
 }
 
 .linkbox:active {
@@ -71,7 +74,7 @@ h2 {
 }
 
 @media (max-width:900px) {
-    .flex-grid {
+    .grid {
         display: block;
 
         .linkbox {
